--- a/src/components/navigation/Nav.css
+++ b/src/components/navigation/Nav.css
@@ -34,7 +34,7 @@
     margin: 5px 10px 5px 10px;
     padding: 10px 15px 10px 15px;
     border-radius: 15px;
-    width: 100%;
+    /* width: 90%; */
 }
 
 .side_button:hover {
