--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,10 +3,61 @@
     flex-direction: row;
 }
 
-.homepage_nav {
+.side_nav {
     flex: 0.2;
 }
 
 .homepage_timeline {
     flex: 0.8;
+}
+
+.settings_form {
+    width: 1000px;
+    border: 1px solid white;
+}
+
+.f {
+    margin: 5% 30% 5% ;
+}
+
+label {
+    font-size: 18px;
+    font-weight: 550;
+}
+
+input {
+    margin-top: 3%;
+    margin-bottom: 7%;
+    width: 400px;
+    height: 50px;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: transparent;
+    color: white;
+    font-size: 21px;
+}
+
+textarea {
+    margin-top: 3%;
+    margin-bottom: 7%;
+    width: 400px;
+    height: 100px;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: transparent;
+    color: white;
+    font-size: 21px;
+}
+
+.us {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-left: 35%;
+    width: 150px;
+    height: 50px;
+    border-radius: 15px;
+    font-weight: 1000;
+    background-color: blue;
+    color: white;
 }
