created firebase project and added config

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,8 +1,8 @@
-.container {
+.login {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 97vh;
+	height: 100vh;
 }
 .login-container {
     flex: 1 0 auto;
