--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -25,7 +25,7 @@ label {
     font-weight: 550;
 }
 
-input {
+.settings_form input {
     margin-top: 3%;
     margin-bottom: 7%;
     width: 400px;
